Configure secure registry authentication using GitHub Secrets

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -204,18 +204,18 @@ jobs:
 
       # BAD: Hardcoded credentials (Step 1 - shows the problem)
       # - name: Log in to Registry (INSECURE - Step 1)
-      #   run: |
+      #  run: |
       #     # 🚨 SECURITY ISSUE: Hardcoded password!
-      #     echo "password123" | docker login ghcr.io -u admin --password-stdin
-      #     echo "⚠️  Using hardcoded credentials - SECURITY RISK!"
+      #    echo "password123" | docker login ghcr.io -u admin --password-stdin
+      #    echo "⚠️  Using hardcoded credentials - SECURITY RISK!"
 
       # GOOD: Uncomment for Step 4: Secure Authentication
       # 👇 Uncomment this section in Step 4 and comment out the above
       # CAPSTONE: Only use GitHub Container Registry (GHCR) for image storage and deployment in this project.
-      # - name: Log in to GitHub Container Registry
-      #   run: |
-      #     echo "${{ secrets.REGISTRY_PAT }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
-      #     echo "✅ Using secure GitHub token authentication"
+      - name: Log in to GitHub Container Registry
+        run: |
+          echo "${{ secrets.REGISTRY_PAT }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
+          echo "✅ Using secure GitHub token authentication"
 
       - name: Build and tag Docker image
         run: |
