--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,15 +6,20 @@ psycopg2-binary>=2.9.10
 prometheus-client==0.19.0
 celery==5.3.4
 pika==1.3.2
-opentelemetry-api==1.21.0
-opentelemetry-sdk==1.21.0
-opentelemetry-exporter-otlp==1.21.0
-opentelemetry-instrumentation-fastapi==0.42b0
-opentelemetry-instrumentation-sqlalchemy==0.42b0
-opentelemetry-instrumentation-celery==0.42b0
-setuptools==78.1.1
 
-# Additional testing dependencies for demos
+# MISE À JOUR SÉCURITÉ : Ces versions acceptent Protobuf 5.x
+opentelemetry-api>=1.25.0
+opentelemetry-sdk>=1.25.0
+opentelemetry-exporter-otlp>=1.25.0
+opentelemetry-instrumentation-fastapi>=0.46b0
+opentelemetry-instrumentation-sqlalchemy>=0.46b0
+opentelemetry-instrumentation-celery>=0.46b0
+
+setuptools>=78.1.1
+# LA FIX POUR LA CVE-2026-0994
+protobuf>=5.29.6
+
+# Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2  # For testing FastAPI
+httpx==0.25.2
